--- a/firstFullApp_Weather/Base.lproj/Main.storyboard
+++ b/firstFullApp_Weather/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                                 </connections>
                             </label>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day4" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YJF-X6-FRn">
-                                <rect key="frame" x="304" y="563" width="60" height="30"/>
+                                <rect key="frame" x="302.5" y="563" width="60" height="30"/>
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="MAt-8V-S01"/>
@@ -70,7 +70,7 @@
                                 </connections>
                             </label>
                             <label opaque="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Day3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RUT-TN-23I">
-                                <rect key="frame" x="230" y="563" width="60" height="30"/>
+                                <rect key="frame" x="233" y="563" width="60" height="30"/>
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="RGu-V5-dwX"/>
@@ -100,17 +100,10 @@
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZWd-iY-UIB">
-                                <rect key="frame" x="235" y="457" width="50" height="50"/>
+                                <rect key="frame" x="238" y="457" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="An8-Ld-wNw"/>
                                     <constraint firstAttribute="height" constant="50" id="bVT-b5-edR"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w3n-4X-KCP">
-                                <rect key="frame" x="309" y="457" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="Iwi-Mg-lcY"/>
-                                    <constraint firstAttribute="width" constant="50" id="oDg-rk-dEP"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jGs-VE-YIb">
@@ -139,13 +132,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WWz-or-Tyl">
-                                <rect key="frame" x="252" y="515" width="17" height="18"/>
+                                <rect key="frame" x="255" y="515" width="17" height="18"/>
                                 <fontDescription key="fontDescription" name="FranklinM54" family="Franklin M54" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTX-5S-Eo4">
-                                <rect key="frame" x="326" y="515" width="17" height="18"/>
+                                <rect key="frame" x="324.5" y="515" width="17" height="18"/>
                                 <fontDescription key="fontDescription" name="FranklinM54" family="Franklin M54" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -166,7 +159,7 @@
                             </label>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wZq-Zg-kjC">
                                 <rect key="frame" x="309" y="45" width="50" height="50"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.84313725490196079" green="0.50196078431372548" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="7FN-Dj-Y3f" userLabel="width = 40"/>
                                     <constraint firstAttribute="height" constant="50" id="MWR-Bf-4xn"/>
@@ -181,11 +174,18 @@
                                 </connections>
                             </button>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bXC-oH-nu7">
-                                <rect key="frame" x="16" y="107" width="343" height="312"/>
+                                <rect key="frame" x="16" y="107" width="342" height="312"/>
                                 <connections>
                                     <segue destination="gcQ-zQ-7as" kind="embed" id="YoJ-gH-ybD"/>
                                 </connections>
                             </containerView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w3n-4X-KCP">
+                                <rect key="frame" x="308" y="457" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Iwi-Mg-lcY"/>
+                                    <constraint firstAttribute="width" constant="50" id="oDg-rk-dEP"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -205,15 +205,15 @@
                             <constraint firstItem="WWz-or-Tyl" firstAttribute="centerX" secondItem="ZWd-iY-UIB" secondAttribute="centerX" id="SAQ-GX-XZD"/>
                             <constraint firstItem="bXC-oH-nu7" firstAttribute="leading" secondItem="jGs-VE-YIb" secondAttribute="leading" id="SBJ-af-51Z"/>
                             <constraint firstItem="nAn-Me-2JC" firstAttribute="centerX" secondItem="4eD-gc-H7K" secondAttribute="centerX" id="SRx-sh-TWl"/>
-                            <constraint firstItem="ZWd-iY-UIB" firstAttribute="left" secondItem="nj6-Bc-R4n" secondAttribute="right" constant="23" id="TRp-5z-Peu"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="w3n-4X-KCP" secondAttribute="trailing" id="Vxx-sC-NVz"/>
+                            <constraint firstItem="ZWd-iY-UIB" firstAttribute="left" secondItem="nj6-Bc-R4n" secondAttribute="right" constant="26" id="TRp-5z-Peu"/>
+                            <constraint firstItem="w3n-4X-KCP" firstAttribute="trailing" secondItem="bXC-oH-nu7" secondAttribute="trailing" id="V4G-TY-xFv"/>
                             <constraint firstItem="nj6-Bc-R4n" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WDY-D8-6nl"/>
                             <constraint firstItem="nj6-Bc-R4n" firstAttribute="leading" secondItem="dPn-W1-ekj" secondAttribute="trailing" constant="26" id="WLg-e8-YeF"/>
                             <constraint firstItem="WWz-or-Tyl" firstAttribute="top" secondItem="ZWd-iY-UIB" secondAttribute="bottom" constant="8" id="aEg-kL-sJw"/>
                             <constraint firstItem="nAn-Me-2JC" firstAttribute="top" secondItem="4eD-gc-H7K" secondAttribute="bottom" constant="30" id="cvM-em-LO2"/>
                             <constraint firstItem="4eD-gc-H7K" firstAttribute="top" secondItem="dPn-W1-ekj" secondAttribute="bottom" constant="8" id="dKz-fB-w9R"/>
                             <constraint firstItem="dPn-W1-ekj" firstAttribute="left" secondItem="jGs-VE-YIb" secondAttribute="right" constant="20" id="hUq-ua-hLU"/>
-                            <constraint firstItem="w3n-4X-KCP" firstAttribute="left" secondItem="ZWd-iY-UIB" secondAttribute="right" constant="24" id="jV7-5r-3Ja"/>
+                            <constraint firstItem="w3n-4X-KCP" firstAttribute="left" secondItem="ZWd-iY-UIB" secondAttribute="right" constant="20" id="jV7-5r-3Ja"/>
                             <constraint firstItem="CTX-5S-Eo4" firstAttribute="top" secondItem="w3n-4X-KCP" secondAttribute="bottom" constant="8" id="jfm-Qy-CUr"/>
                             <constraint firstItem="4eD-gc-H7K" firstAttribute="centerX" secondItem="dPn-W1-ekj" secondAttribute="centerX" id="joN-9R-TKo"/>
                             <constraint firstItem="boa-Ek-cma" firstAttribute="top" secondItem="jGs-VE-YIb" secondAttribute="bottom" constant="8" id="mvb-eg-bLQ"/>
@@ -242,6 +242,7 @@
                         <outlet property="day3Label" destination="RUT-TN-23I" id="ua6-ab-9FY"/>
                         <outlet property="day4Icon" destination="w3n-4X-KCP" id="RJB-g5-I1l"/>
                         <outlet property="day4Label" destination="YJF-X6-FRn" id="Orm-zp-fKn"/>
+                        <outlet property="menuButton" destination="wZq-Zg-kjC" id="zhD-N3-iw8"/>
                         <outlet property="temp0Label" destination="boa-Ek-cma" id="Ylc-f0-Q2m"/>
                         <outlet property="temp1Label" destination="4eD-gc-H7K" id="lt1-50-vDz"/>
                         <outlet property="temp2Label" destination="c3D-4K-amk" id="R7z-4e-kw8"/>
@@ -319,7 +320,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="000-ei-ZEe" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="qaa-Of-fhf">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qaa-Of-fhf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -332,19 +333,42 @@
             </objects>
             <point key="canvasLocation" x="988" y="159"/>
         </scene>
-        <!--View Controller-->
+        <!--Animated Weather View Controller-->
         <scene sceneID="vHy-vK-LAc">
             <objects>
-                <viewController id="gcQ-zQ-7as" sceneMemberID="viewController">
+                <viewController id="gcQ-zQ-7as" customClass="AnimatedWeatherViewController" customModule="firstFullApp_Weather" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SLI-ud-2FF"/>
+                        <viewControllerLayoutGuide type="bottom" id="etS-KM-ftl"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VU6-L6-dPC">
-                        <rect key="frame" x="0.0" y="0.0" width="343" height="312"/>
+                        <rect key="frame" x="0.0" y="0.0" width="342" height="312"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CityName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TeZ-md-Owc">
+                                <rect key="frame" x="46" y="20" width="104" height="24"/>
+                                <fontDescription key="fontDescription" name="FranklinM54" family="Franklin M54" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UUl-KH-bu7">
+                                <rect key="frame" x="72" y="60" width="53" height="24"/>
+                                <fontDescription key="fontDescription" name="FranklinM54" family="Franklin M54" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="TeZ-md-Owc" firstAttribute="top" secondItem="SLI-ud-2FF" secondAttribute="bottom" constant="20" id="2nX-KX-Bvl"/>
+                            <constraint firstItem="UUl-KH-bu7" firstAttribute="top" secondItem="SLI-ud-2FF" secondAttribute="bottom" constant="60" id="Y7l-F4-JNs"/>
+                            <constraint firstItem="UUl-KH-bu7" firstAttribute="centerX" secondItem="TeZ-md-Owc" secondAttribute="centerX" id="cqT-hn-Yj6"/>
+                            <constraint firstItem="TeZ-md-Owc" firstAttribute="leading" secondItem="VU6-L6-dPC" secondAttribute="leadingMargin" constant="30" id="uqL-IQ-ozY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ll2-nz-fhe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2132" y="803"/>
+            <point key="canvasLocation" x="2131.1999999999998" y="802.39880059970017"/>
         </scene>
     </scenes>
     <resources>
